Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Made LDAPBackingDirectory work with non-ascii passwords (convert to UTF-8).
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-